// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache group simple cache 1`] = `"hi test test"`;

exports[`cache group simple cache 2`] = `"hi test test"`;

exports[`cache group simple cache 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "testtest",
      null,
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
    },
    "max": 3,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test test",
      null,
      null,
    ],
  },
}
`;

exports[`cache group simple cache 4`] = `undefined`;

exports[`cache group simple cache 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "calculatedSize": 0,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 3,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
    ],
  },
}
`;
